--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ h1{font-size: 30px;margin-top: 10px;font-weight: 900;}
         <div class="container">
           <img class="avatar" src="beto4ka.jpg">
           <!-- Заголовок канала -->
-          <h1 class="jumbotron-heading">Точка</h1>
+          <h1 class="jumbotron-heading">То4чка</h1>
           <!-- Описание, укажите здесь то, что замотивирует человека подписаться -->
           <p style="display:block" class="lead text-muted">Юмор и счастье</p>
           <p>
