--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@ h1{font-size: 30px;margin-top: 10px;font-weight: 900;}
 </style>
 
   <body>
-
+<script>
+  fbq('track', 'Lead');
+</script>
 <!--
 
   Функционал:
