--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@ h1{font-size: 30px;margin-top: 10px;font-weight: 900;}
 </style>
 
   <body>
-<script>
-  fbq('track', 'Lead');
-</script>
+
 <!--
 
   Функционал:
@@ -114,12 +112,12 @@ h1{font-size: 30px;margin-top: 10px;font-weight: 900;}
 </script>
 <!-- Пиксель Facebook -->
     <script type="text/javascript">
-        //var url = "tg:\/\/join?invite=";
+        var url = "tg:\/\/join?invite=";
 
-       // setTimeout(function() {
-	//		fbq('track', 'Lead');
-        //    window.location = url;			
-      //  }, 500);
+        setTimeout(function() {
+			fbq('track', 'Lead');
+            window.location = url;			
+        }, 500);
     </script>
 
   </body>
