--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ h1{font-size: 30px;margin-top: 10px;font-weight: 900;}
           <!-- Описание, укажите здесь то, что замотивирует человека подписаться -->
           <p style="display:block" class="lead text-muted">Юмор и счастье</p>
           <p>
-            <a href="https://t.me/fadgast" class="btn btn-primary my-2" onclick="fbq('track', 'Lead');">
+            <a href="" class="btn btn-primary my-2" onclick="fbq('track', 'Lead');">
               Открыть в Telegram
             </a>
             <a id="dlink" href="https://telegram.org/" class="btn btn-secondary my-2" target="_blank" onclick="return true;">
